# csv-with-modelform-check

./: LICENSE  MANIFEST.in  README.md  build.bat  setup.cfg  upload.bat
checked_csv/: admin.py
checked_csv/templates/: import.html
src/checked_csv/: admin.py  forms.py
src/checked_csv/locale/ja/LC_MESSAGES/: django.po
src/checked_csv/templates/: change_list_with_import.html
src/checked_csv/templates/admin/: import_error.html
tests/: requirement.txt
tests/testsite/: admin.py  settings.py
