[metadata]
name = checked_csv
version = 1.0.7
author = yujiwen
author_email = yujiwen@hotmail.com
description = Django Admin site plugin that can export and import csv files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yujiwen/csv-with-modelform-check
project_urls = 
bug tracker = https://github.com/yujiwen/csv-with-modelform-check/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
include_package_data = true

[options.packages.find]
where = src